added player name functionality and changed styles

--- a/tictactoe/ttt_app/static/ttt_style.css
+++ b/tictactoe/ttt_app/static/ttt_style.css
@@ -1,10 +1,24 @@
 body {
-  background-color: #2E8B57;
+  background-color: #3CB371;
 }
 
 section {
   text-align: center;
+  text-shadow: 3px 3px black;
+}
+
+label {
+  font-size: 25px;
+  color: #90EE90;
+}
+
+.player {
+  margin: 25px auto;
+  background-color: #2E8B57;
+  color: #98FB98;
+  box-shadow: 2px 2px 2px 2px black;
   text-shadow: 2px 2px black;
+  font-size: 20px;
 }
 
 .cell {
@@ -16,7 +30,7 @@ section {
   line-height: 100px;
   font-size: 60px;
   color: #98FB98;
-  background-color: #3CB371;
+  background-color: #2E8B57;
 }
 
 .game-title {
@@ -38,13 +52,25 @@ section {
   margin: 20px auto;
 }
 
-.game-reset {
+.newgame-btn {
   margin: auto;
   width: 200px;
   height: 50px;
   font-size: 16px;
   box-shadow: 2px 2px 2px 2px black;
-  background-color: #3CB371;
+  background-color: #2E8B57;
+  text-shadow: 1px 1px black;
+  color: #98FB98;
+  border: 2px solid black;
+}
+
+.restart-btn {
+  margin: auto;
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  box-shadow: 2px 2px 2px 2px black;
+  background-color: #2E8B57;
   text-shadow: 1px 1px black;
   color: #98FB98;
   border: 2px solid black;
