--- a/tictactoe/ttt_app/templates/tictactoe.html
+++ b/tictactoe/ttt_app/templates/tictactoe.html
@@ -24,16 +24,14 @@
 <br>
 
   <h2 class="game-status"></h2>
-  <button class="game-reset">Restart Game</button>
+  <button class="restart-btn">Restart Game</button>
+  <button class="newgame-btn" value="New Game" onclick="location.href='{% url 'start_page' %}'">New Game</button>
 
 <br>
 
-<div class="player-container">
-  <div class="player">
-  <div>
-</div>
-
 </section>
+
+<div class="player-names" data-playerx="{{playerx}}" data-playero="{{playero}}"></div>
 
 <script src="{% static 'tictactoe.js' %}"></script>
 </body>
